--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-scripts": "3.4.0",
     "react-thunk": "^1.0.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sha256": "^0.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
