--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-thunk": "^1.0.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "reverse-geocoding": "^3.0.2",
     "sha256": "^0.2.0"
   },
   "scripts": {
