--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-intl": "^4.1.1",
+    "react-loader-spinner": "^3.1.5",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
